grammar.js
    file: ($) => repeat(seq(optional($._command), $._end)),

    _command: ($) =>
      choice(
        $.alias_directive,
        $.alternates_directive,
        $.alternative_order_directive,
        $.attachments_directive,
        $.auto_view_directive,
        $.bind_directive,
        $.cd_directive,
        $.color_directive,
        $.echo_directive,
        $.exec_directive,
        $.finish_directive,
        $.group_directive,
        $.hdr_order_directive,
        $.ifdef_directive,
        $.ifndef_directive,
        $.ignore_directive,
        $.lists_directive,
        $.macro_directive,
        $.mailboxes_directive,
        $.named_mailboxes_directive,
        $.mailto_allow_directive,
        $.mime_lookup_directive,
        $.mono_directive,
        $.my_hdr_directive,
        $.nospam_directive,
        $.push_directive,
        $.reset_directive,
        $.score_directive,
        $.set_directive,
        $.setenv_directive,
        $.sidebar_pin_directive,
        $.sidebar_unpin_directive,
        $.source_directive,
        $.spam_directive,
        $.subjectrx_directive,
        $.subscribe_directive,
        $.toggle_directive,
        $.unalias_directive,
        $.unalternates_directive,
        $.unalternative_order_directive,
        $.unattachments_directive,
        $.unauto_view_directive,
        $.unbind_directive,
        $.uncolor_directive,
        $.ungroup_directive,
        $.unhdr_order_directive,
        $.unhook_directive,
        $.unignore_directive,
        $.unlists_directive,
        $.unmacro_directive,
        $.unmailboxes_directive,
        $.unmailto_allow_directive,
        $.unmime_lookup_directive,
        $.unmono_directive,
        $.unmy_hdr_directive,
        $.unscore_directive,
        $.unset_directive,
        $.unsetenv_directive,
        $.unsubjectrx_directive,
        $.unsubscribe_directive,
        $.account_hook_directive,
        $.charset_hook_directive,
        $.iconv_hook_directive,
        $.crypt_hook_directive,
        $.index_format_hook_directive,
        $.fcc_save_hook_directive,
        $.fcc_hook_directive,
        $.save_hook_directive,
        $.folder_hook_directive,
        $.mbox_hook_directive,
        $.message_hook_directive,
        $.open_hook_directive,
        $.close_hook_directive,
        $.append_hook_directive,
        $.reply_hook_directive,
        $.send_hook_directive,
        $.send2_hook_directive,
        $.timeout_hook_directive,
        $.startup_hook_directive,
        $.shutdown_hook_directive,
        $.subscribe_to_directive,
        $.unsubscribe_from_directive
      ),

    key: ($) =>
      repeat1(
        choice(
          seq("<", alias(/[a-zA-Z0-9-]+/, $.key_name), ">"),
          /[^\n\\ ]/,
          alias(/\\./, $.escape)
        )
      ),

    map: (_) =>
      choice(
        "alias",
        "attach",
        "browser",
        "compose",
        "editor",
        "generic",
        "index",
        "mix",
        "pager",
        "pgp",
        "postpone",
        "query",
        "smime"
      ),
    _maps: ($) => commaSep1($.map),
    function: (_) => /[a-z-]+/,
    bind_directive: ($) => command($, "bind", $._maps, $.key, $.function),
    unbind_directive: ($) => command($, "unbind", choice("*", $._maps), $.key),

    sequence: ($) => $._string,
    macro_directive: ($) =>
      command($, "macro", $._maps, $.key, $.sequence, $.description),
    unmacro_directive: ($) =>
      command($, "unmacro", choice("*", $._maps), $.key),

    description: ($) => $._string,
    set_directive: ($) => command($, "set", choice($._options2, $._options3)),
    _options3: ($) =>
      spaceSep1(
        seq(
          $.option,
          optional(" "),
          choice("+=", "-=", "="),
          optional(" "),
          choice($.int, $.quadoption, $._string)
        )
      ),
    _options2: ($) => spaceSep1(seq(optional(choice("&", "?")), $.option)),
    _options: ($) => spaceSep1($.option),
    unset_directive: ($) => command($, "unset", $._options),
    reset_directive: ($) => command($, "reset", $._options),
    toggle_directive: ($) => command($, "toggle", $._options),

    env_var: (_) => /[a-zA-Z_][a-zA-Z_\d]*/,
    setenv_directive: ($) =>
      command(
        $,
        "setenv",
        choice(seq("?", $.env_var), seq($.env_var, alias(/\S+/, $.value)))
      ),
    unsetenv_directive: ($) => command($, "unsetenv", $.env_var),
    option: (_) => /[a-z_\d]+/,

    quadoption: (_) => choice("yes", "no", "ask-yes", "ask-no"),
    int: (_) => /-?\d+/,
    _string: ($) =>
      choice(
        quoted_string("'", $.string),
        quoted_string('"', $.shell),
        quoted_string("`", $.shell),
        alias($._word, $.shell),
      ),
    _end: ($) => seq(optional($._space), optional($.comment), $._eol),
  },
});

function command($, cmd, ...args) {
  return seq(alias(cmd, $.command), ...args);
}

function sep1(rule, separator) {
  return seq(rule, repeat(seq(separator, rule)));
}

function commaSep1(rule) {
  return sep1(rule, ",");
}

function spaceSep1(rule) {
  return sep1(rule, " ");
}

function quoted_string(char, name) {
  return seq(
    char,
    alias(
      field("content", new RegExp("([^" + char + "]|\\\\" + char + ")*")),
      name
    ),
    char
  );
}
